Styling and Responsiveness Fixes * Fixed the toggle for classes between the state when it's loading and when it has the data so that the background gradient stretches properly * Added different classNames for the toggle when the state for loading changes in the Main.js file * Modified the spacing around the QR and text above it section to allow for spacing on the left side * For smaller screen sizes, modified the padding and width of the generic info section overall * Got rid of the min width for the icon area section in the individual rows in the full section and added another breakpoint for individual rows to be full width at 975 px and to be stacked more with the time and panel name

--- a/frontend/src/components/FullSchedule/full-schedule.scss
+++ b/frontend/src/components/FullSchedule/full-schedule.scss
@@ -21,7 +21,6 @@
 
 // ----- Styles the icon start -------
 .icon-area {
-    min-width: 10%;
     height: 100%;
     text-align: right;
     font-size: 1.3em;
@@ -110,6 +109,25 @@
 @media only screen and (min-width: 601px) {
     .time-area {
         margin-top: 0%;
+    }
+}
+
+@media only screen and (max-width: 975px) {
+    .individual-rows.full-version {
+        width: auto;
+        margin: auto;
+        padding: 20px 0px;
+    }
+
+    .text-area-full.top {
+        vertical-align: top;
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+    }
+    
+    .panel-name-full {
+        margin-left: 5px;
     }
 }
 
